crates/analyzer/tests/snapshots/analysis__type_aliases.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(&db, module)"

---
note: 
  ┌─ type_aliases.fe:3:1
  │
3 │ type Posts = Map<PostId, PostBody>
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Map<u256, String<32>>

note: 
  ┌─ type_aliases.fe:5:1
  │
5 │ type Scoreboard = Map<PostId, Score>
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Map<u256, u64>

note: 
  ┌─ type_aliases.fe:7:1
  │
7 │ type AuthorPosts = Map<Author, PostId>
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Map<address, u256>

note: 
  ┌─ type_aliases.fe:9:1
  │
9 │ type Author = address
  │ ^^^^^^^^^^^^^^^^^^^^^ address

note: 
   ┌─ type_aliases.fe:11:1
   │
11 │ type Score = u64
   │ ^^^^^^^^^^^^^^^^ u64

note: 
   ┌─ type_aliases.fe:13:1
   │
13 │ type PostId = u256
   │ ^^^^^^^^^^^^^^^^^^ u256

note: 
   ┌─ type_aliases.fe:15:1
   │
15 │ type PostBody = String<32>
   │ ^^^^^^^^^^^^^^^^^^^^^^^^^^ String<32>

note: 
   ┌─ type_aliases.fe:18:5
   │
18 │     posts: Posts
   │     ^^^^^^^^^^^^ Map<u256, String<32>>
19 │     authors: AuthorPosts
   │     ^^^^^^^^^^^^^^^^^^^^ Map<address, u256>
20 │     scoreboard: Scoreboard
   │     ^^^^^^^^^^^^^^^^^^^^^^ Map<u256, u64>

note: 
   ┌─ type_aliases.fe:22:5
   │  
22 │ ╭     pub fn post(self, ctx: Context, body: PostBody) {
23 │ │         let id: PostId = 0
24 │ │         self.posts[id] = body
25 │ │         self.authors[ctx.msg_sender()]
26 │ │         self.scoreboard[id] = 0
27 │ │     }
   │ ╰─────^ attributes hash: 4649056442968527631
   │  
   = FunctionSignature {
         self_decl: Some(
             Mutable,
         ),
         ctx_decl: Some(
             Mutable,
         ),
         params: [
             FunctionParam {
                 label: None,
                 name: "ctx",
                 typ: Ok(
                     Struct(
                         Struct {
                             name: "Context",
                             field_count: 0,
                         },
                     ),
                 ),
             },
             FunctionParam {
                 label: None,
                 name: "body",
                 typ: Ok(
                     String(
                         FeString {
                             max_size: 32,
                         },
                     ),
                 ),
             },
         ],
         return_type: Ok(
             Base(
                 Unit,
             ),
         ),
     }

note: 
   ┌─ type_aliases.fe:23:13
   │
23 │         let id: PostId = 0
   │             ^^ u256

note: 
   ┌─ type_aliases.fe:23:26
   │
23 │         let id: PostId = 0
   │                          ^ u256: Value
24 │         self.posts[id] = body
   │         ^^^^ Forum: Value

note: 
   ┌─ type_aliases.fe:24:9
   │
24 │         self.posts[id] = body
   │         ^^^^^^^^^^ ^^ u256: Value
   │         │           
   │         Map<u256, String<32>>: Storage { nonce: Some(0) }

note: 
   ┌─ type_aliases.fe:24:9
   │
24 │         self.posts[id] = body
   │         ^^^^^^^^^^^^^^   ^^^^ String<32>: Memory
   │         │                 
   │         String<32>: Storage { nonce: None }
25 │         self.authors[ctx.msg_sender()]
   │         ^^^^ Forum: Value

note: 
   ┌─ type_aliases.fe:25:9
   │
25 │         self.authors[ctx.msg_sender()]
   │         ^^^^^^^^^^^^ ^^^ Context: Memory
   │         │             
   │         Map<address, u256>: Storage { nonce: Some(1) }

note: 
   ┌─ type_aliases.fe:25:22
   │
25 │         self.authors[ctx.msg_sender()]
   │                      ^^^^^^^^^^^^^^^^ address: Value

note: 
   ┌─ type_aliases.fe:25:9
   │
25 │         self.authors[ctx.msg_sender()]
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ u256: Storage { nonce: None }
26 │         self.scoreboard[id] = 0
   │         ^^^^ Forum: Value

note: 
   ┌─ type_aliases.fe:26:9
   │
26 │         self.scoreboard[id] = 0
   │         ^^^^^^^^^^^^^^^ ^^ u256: Value
   │         │                
   │         Map<u256, u64>: Storage { nonce: Some(2) }

note: 
   ┌─ type_aliases.fe:26:9
   │
26 │         self.scoreboard[id] = 0
   │         ^^^^^^^^^^^^^^^^^^^   ^ u64: Value
   │         │                      
   │         u64: Storage { nonce: None }

note: 
   ┌─ type_aliases.fe:29:5
   │  
29 │ ╭     pub fn upvote(self, id: PostId) -> Score {
30 │ │         let score: Score = self.scoreboard[id] + 1
31 │ │         self.scoreboard[id] = score
32 │ │         return score
33 │ │     }
   │ ╰─────^ attributes hash: 4383698668262923633
   │  
   = FunctionSignature {
         self_decl: Some(
             Mutable,
         ),
         ctx_decl: None,
         params: [
             FunctionParam {
                 label: None,
                 name: "id",
                 typ: Ok(
                     Base(
                         Numeric(
                             U256,
                         ),
                     ),
                 ),
             },
         ],
         return_type: Ok(
             Base(
                 Numeric(
                     U64,
                 ),
             ),
         ),
     }

note: 
   ┌─ type_aliases.fe:30:13
   │
30 │         let score: Score = self.scoreboard[id] + 1
   │             ^^^^^ u64

note: 
   ┌─ type_aliases.fe:30:28
   │
30 │         let score: Score = self.scoreboard[id] + 1
   │                            ^^^^ Forum: Value

note: 
   ┌─ type_aliases.fe:30:28
   │
30 │         let score: Score = self.scoreboard[id] + 1
   │                            ^^^^^^^^^^^^^^^ ^^ u256: Value
   │                            │                
   │                            Map<u256, u64>: Storage { nonce: Some(2) }

note: 
   ┌─ type_aliases.fe:30:28
   │
30 │         let score: Score = self.scoreboard[id] + 1
   │                            ^^^^^^^^^^^^^^^^^^^   ^ u64: Value
   │                            │                      
   │                            u64: Storage { nonce: None } => Value

note: 
   ┌─ type_aliases.fe:30:28
   │
30 │         let score: Score = self.scoreboard[id] + 1
   │                            ^^^^^^^^^^^^^^^^^^^^^^^ u64: Value
31 │         self.scoreboard[id] = score
   │         ^^^^ Forum: Value

note: 
   ┌─ type_aliases.fe:31:9
   │
31 │         self.scoreboard[id] = score
   │         ^^^^^^^^^^^^^^^ ^^ u256: Value
   │         │                
   │         Map<u256, u64>: Storage { nonce: Some(2) }

note: 
   ┌─ type_aliases.fe:31:9
   │
31 │         self.scoreboard[id] = score
   │         ^^^^^^^^^^^^^^^^^^^   ^^^^^ u64: Value
   │         │                      
   │         u64: Storage { nonce: None }
32 │         return score
   │                ^^^^^ u64: Value

note: 
   ┌─ type_aliases.fe:35:5
   │  
35 │ ╭     pub fn get_post(self, id: PostId) -> PostBody {
36 │ │         return self.posts[id].to_mem()
37 │ │     }
   │ ╰─────^ attributes hash: 6772945894090223199
   │  
   = FunctionSignature {
         self_decl: Some(
             Mutable,
         ),
         ctx_decl: None,
         params: [
             FunctionParam {
                 label: None,
                 name: "id",
                 typ: Ok(
                     Base(
                         Numeric(
                             U256,
                         ),
                     ),
                 ),
             },
         ],
         return_type: Ok(
             String(
                 FeString {
                     max_size: 32,
                 },
             ),
         ),
     }

note: 
   ┌─ type_aliases.fe:36:16
   │
36 │         return self.posts[id].to_mem()
   │                ^^^^ Forum: Value

note: 
   ┌─ type_aliases.fe:36:16
   │
36 │         return self.posts[id].to_mem()
   │                ^^^^^^^^^^ ^^ u256: Value
   │                │           
   │                Map<u256, String<32>>: Storage { nonce: Some(0) }

note: 
   ┌─ type_aliases.fe:36:16
   │
36 │         return self.posts[id].to_mem()
   │                ^^^^^^^^^^^^^^ String<32>: Storage { nonce: None }

note: 
   ┌─ type_aliases.fe:36:16
   │
36 │         return self.posts[id].to_mem()
   │                ^^^^^^^^^^^^^^^^^^^^^^^ String<32>: Storage { nonce: None } => Memory


