crates/analyzer/tests/snapshots/analysis__u256_u256_map.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(&db, module)"

---
note: 
  ┌─ u256_u256_map.fe:2:5
  │
2 │     bar: Map<u256, u256>
  │     ^^^^^^^^^^^^^^^^^^^^ Map<u256, u256>

note: 
  ┌─ u256_u256_map.fe:4:5
  │  
4 │ ╭     pub fn read_bar(self, key: u256) -> u256:
5 │ │         return self.bar[key]
  │ ╰────────────────────────────^ attributes hash: 4111540032382247727
  │  
  = FunctionSignature {
        self_decl: Some(
            Mutable,
        ),
        ctx_decl: None,
        params: [
            FunctionParam {
                name: "key",
                typ: Ok(
                    Base(
                        Numeric(
                            U256,
                        ),
                    ),
                ),
            },
        ],
        return_type: Ok(
            Base(
                Numeric(
                    U256,
                ),
            ),
        ),
    }

note: 
  ┌─ u256_u256_map.fe:5:16
  │
5 │         return self.bar[key]
  │                ^^^^ Foo: Value

note: 
  ┌─ u256_u256_map.fe:5:16
  │
5 │         return self.bar[key]
  │                ^^^^^^^^ ^^^ u256: Value
  │                │         
  │                Map<u256, u256>: Storage { nonce: Some(0) }

note: 
  ┌─ u256_u256_map.fe:5:16
  │
5 │         return self.bar[key]
  │                ^^^^^^^^^^^^^ u256: Storage { nonce: None } => Value

note: 
  ┌─ u256_u256_map.fe:7:5
  │  
7 │ ╭     pub fn write_bar(self, key: u256, value: u256):
8 │ │         self.bar[key] = value
  │ ╰─────────────────────────────^ attributes hash: 11519906425715717488
  │  
  = FunctionSignature {
        self_decl: Some(
            Mutable,
        ),
        ctx_decl: None,
        params: [
            FunctionParam {
                name: "key",
                typ: Ok(
                    Base(
                        Numeric(
                            U256,
                        ),
                    ),
                ),
            },
            FunctionParam {
                name: "value",
                typ: Ok(
                    Base(
                        Numeric(
                            U256,
                        ),
                    ),
                ),
            },
        ],
        return_type: Ok(
            Base(
                Unit,
            ),
        ),
    }

note: 
  ┌─ u256_u256_map.fe:8:9
  │
8 │         self.bar[key] = value
  │         ^^^^ Foo: Value

note: 
  ┌─ u256_u256_map.fe:8:9
  │
8 │         self.bar[key] = value
  │         ^^^^^^^^ ^^^ u256: Value
  │         │         
  │         Map<u256, u256>: Storage { nonce: Some(0) }

note: 
  ┌─ u256_u256_map.fe:8:9
  │
8 │         self.bar[key] = value
  │         ^^^^^^^^^^^^^   ^^^^^ u256: Value
  │         │                
  │         u256: Storage { nonce: None }


