crates/analyzer/tests/snapshots/analysis__u32_u32_map.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(&db, module)"

---
note: 
  ┌─ u32_u32_map.fe:2:5
  │
2 │     bar: Map<u32, u32>
  │     ^^^^^^^^^^^^^^^^^^ Map<u32, u32>

note: 
  ┌─ u32_u32_map.fe:4:5
  │  
4 │ ╭     pub fn read_bar(self, key: u32) -> u32 {
5 │ │         return self.bar[key]
6 │ │     }
  │ ╰─────^ self: Some(Mutable), params: [{ label: None, name: key, typ: u32 }] -> u32

note: 
  ┌─ u32_u32_map.fe:5:16
  │
5 │         return self.bar[key]
  │                ^^^^ Foo

note: 
  ┌─ u32_u32_map.fe:5:16
  │
5 │         return self.bar[key]
  │                ^^^^^^^^ ^^^ u32
  │                │         
  │                SPtr<Map<u32, u32>>

note: 
  ┌─ u32_u32_map.fe:5:16
  │
5 │         return self.bar[key]
  │                ^^^^^^^^^^^^^ SPtr<u32> -> u32

note: 
   ┌─ u32_u32_map.fe:8:5
   │  
 8 │ ╭     pub fn write_bar(self, key: u32, value: u32) {
 9 │ │         self.bar[key] = value
10 │ │     }
   │ ╰─────^ self: Some(Mutable), params: [{ label: None, name: key, typ: u32 }, { label: None, name: value, typ: u32 }] -> ()

note: 
  ┌─ u32_u32_map.fe:9:9
  │
9 │         self.bar[key] = value
  │         ^^^^ Foo

note: 
  ┌─ u32_u32_map.fe:9:9
  │
9 │         self.bar[key] = value
  │         ^^^^^^^^ ^^^ u32
  │         │         
  │         SPtr<Map<u32, u32>>

note: 
  ┌─ u32_u32_map.fe:9:9
  │
9 │         self.bar[key] = value
  │         ^^^^^^^^^^^^^   ^^^^^ u32
  │         │                
  │         SPtr<u32>


