crates/analyzer/tests/snapshots/analysis__u64_u64_map.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(&db, module)"

---
note: 
  ┌─ u64_u64_map.fe:2:5
  │
2 │     bar: Map<u64, u64>
  │     ^^^^^^^^^^^^^^^^^^ Map<u64, u64>

note: 
  ┌─ u64_u64_map.fe:4:5
  │  
4 │ ╭     pub fn read_bar(self, key: u64) -> u64:
5 │ │         return self.bar[key]
  │ ╰────────────────────────────^ attributes hash: 6069675140256389255
  │  
  = FunctionSignature {
        self_decl: Some(
            Mutable,
        ),
        ctx_decl: None,
        params: [
            FunctionParam {
                name: "key",
                typ: Ok(
                    Base(
                        Numeric(
                            U64,
                        ),
                    ),
                ),
            },
        ],
        return_type: Ok(
            Base(
                Numeric(
                    U64,
                ),
            ),
        ),
    }

note: 
  ┌─ u64_u64_map.fe:5:16
  │
5 │         return self.bar[key]
  │                ^^^^ Foo: Value

note: 
  ┌─ u64_u64_map.fe:5:16
  │
5 │         return self.bar[key]
  │                ^^^^^^^^ ^^^ u64: Value
  │                │         
  │                Map<u64, u64>: Storage { nonce: Some(0) }

note: 
  ┌─ u64_u64_map.fe:5:16
  │
5 │         return self.bar[key]
  │                ^^^^^^^^^^^^^ u64: Storage { nonce: None } => Value

note: 
  ┌─ u64_u64_map.fe:7:5
  │  
7 │ ╭     pub fn write_bar(self, key: u64, value: u64):
8 │ │         self.bar[key] = value
  │ ╰─────────────────────────────^ attributes hash: 5638608008920365969
  │  
  = FunctionSignature {
        self_decl: Some(
            Mutable,
        ),
        ctx_decl: None,
        params: [
            FunctionParam {
                name: "key",
                typ: Ok(
                    Base(
                        Numeric(
                            U64,
                        ),
                    ),
                ),
            },
            FunctionParam {
                name: "value",
                typ: Ok(
                    Base(
                        Numeric(
                            U64,
                        ),
                    ),
                ),
            },
        ],
        return_type: Ok(
            Base(
                Unit,
            ),
        ),
    }

note: 
  ┌─ u64_u64_map.fe:8:9
  │
8 │         self.bar[key] = value
  │         ^^^^ Foo: Value

note: 
  ┌─ u64_u64_map.fe:8:9
  │
8 │         self.bar[key] = value
  │         ^^^^^^^^ ^^^ u64: Value
  │         │         
  │         Map<u64, u64>: Storage { nonce: Some(0) }

note: 
  ┌─ u64_u64_map.fe:8:9
  │
8 │         self.bar[key] = value
  │         ^^^^^^^^^^^^^   ^^^^^ u64: Value
  │         │                
  │         u64: Storage { nonce: None }


