crates/analyzer/tests/snapshots/analysis__u8_u8_map.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(&db, module)"

---
note: 
  ┌─ u8_u8_map.fe:2:5
  │
2 │     bar: Map<u8, u8>
  │     ^^^^^^^^^^^^^^^^ Map<u8, u8>

note: 
  ┌─ u8_u8_map.fe:4:5
  │  
4 │ ╭     pub fn read_bar(self, key: u8) -> u8 {
5 │ │         return self.bar[key]
6 │ │     }
  │ ╰─────^ self: Some(Mutable), params: [{ label: None, name: key, typ: u8 }] -> u8

note: 
  ┌─ u8_u8_map.fe:5:16
  │
5 │         return self.bar[key]
  │                ^^^^ Foo

note: 
  ┌─ u8_u8_map.fe:5:16
  │
5 │         return self.bar[key]
  │                ^^^^^^^^ ^^^ u8
  │                │         
  │                SPtr<Map<u8, u8>>

note: 
  ┌─ u8_u8_map.fe:5:16
  │
5 │         return self.bar[key]
  │                ^^^^^^^^^^^^^ SPtr<u8> -> u8

note: 
   ┌─ u8_u8_map.fe:8:5
   │  
 8 │ ╭     pub fn write_bar(self, key: u8, value: u8) {
 9 │ │         self.bar[key] = value
10 │ │     }
   │ ╰─────^ self: Some(Mutable), params: [{ label: None, name: key, typ: u8 }, { label: None, name: value, typ: u8 }] -> ()

note: 
  ┌─ u8_u8_map.fe:9:9
  │
9 │         self.bar[key] = value
  │         ^^^^ Foo

note: 
  ┌─ u8_u8_map.fe:9:9
  │
9 │         self.bar[key] = value
  │         ^^^^^^^^ ^^^ u8
  │         │         
  │         SPtr<Map<u8, u8>>

note: 
  ┌─ u8_u8_map.fe:9:9
  │
9 │         self.bar[key] = value
  │         ^^^^^^^^^^^^^   ^^^^^ u8
  │         │                
  │         SPtr<u8>


